# surpy

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/surpy/: config.py  errors.py
src/surpy/questions/: const.py  option.py  question.py  response.py
src/surpy/questions/strategies/: __init__.py  matrix_multiple_strategy.py  matrix_single_strategy.py  multiple_strategy.py  number_strategy.py  rank_strategy.py  single_strategy.py  strategy.py  text_strategy.py
src/surpy/survey/: survey.py  survey_builder.py
tests/data/: survey_metadata.yml
tests/fixtures/: survey_data.xlsx  survey_metadata.yml
tests/integration/: test_build.py
tests/unit/questions/: test_question.py
tests/unit/questions/strategies/: test_single_strategy.py
tests/unit/survey/: test_survey.py  test_survey_builder.py
