[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "surpy"
version = "0.1.0"
description = "Tools for working with survey-formatted datasets"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [{ name = "Ha Hoang Hao", email = "hhhao.vn@gmail.com" }]

dependencies = ["polars[excel]>=1.37.1", "PyYAML>=6.0.3"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "coverage"]

[project.urls]
Homepage = "https://github.com/hoanghaoha/surpy"
Repository = "https://github.com/hoanghaoha/surpy"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/surpy"]
